# miniature-octo-funicular

./: .gitignore  README.md  pyproject.toml
api/: urls.py
api/sca/: admin.py  apps.py  models.py  serializers.py  views.py
api/sca/migrations/: 0001_initial.py  0002_alter_mission_cat.py
config/: asgi.py  settings.py  urls.py  wsgi.py
